fix music page